# ur_CB2_hw_ROS2

./: CMakeLists.txt  README.md  hardware_interface_plugin.xml  package.xml
config/: joy.yaml  ur_controllers.yaml
include/ur_hardware_interface/: ur_hardware_interface.h
launch/: ur10.launch.py  ur_control.launch.py  ur_joy.launch.py
script/: inp.txt  log.py  out.txt
src/: ur_ros2_control_node.cpp
src/ur_hardware_interface/: robot_state.cpp  robot_state_RT.cpp  ur_communication.cpp  ur_driver.cpp  ur_hardware_interface.cpp  ur_realtime_communication.cpp
test/: test.py
urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
